Feature: Markdown format in AI responses

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@
 PORT=3001
 
 # API Key de Google Gemini
-GEMINI_API_KEY=API_KEY_AQUI
+GEMINI_API_KEY=
 # Timeout de ejecución en segundos
 EXECUTION_TIMEOUT=5
