--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@
 PORT=3001
 
 # API Key de Google Gemini
-GEMINI_API_KEY=
+GEMINI_API_KEY=tu_api_key_aqui
 # Timeout de ejecución en segundos
 EXECUTION_TIMEOUT=5
