--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ PORT=3001
 GEMINI_API_KEY=tu_api_key_aqui
 # Timeout de ejecución en segundos
 EXECUTION_TIMEOUT=5
+# URI de conexión a MongoDB
+MONGODB_URI=MONGODB_URI_aqui
