--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,4 +6,4 @@ GEMINI_API_KEY=tu_api_key_aqui
 # Timeout de ejecución en segundos
 EXECUTION_TIMEOUT=5
 # URI de conexión a MongoDB
-MONGODB_URI=jajaja
+MONGODB_URI=MONGODB_URI_aqui
