--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,8 @@ PORT=3001
 
 # API Key de Google Gemini
 GEMINI_API_KEY=tu_api_key_aqui
+# API Key de Sanity GROQ
+GROQ_API_KEY=tu_groq_api_key_aqui
 # Timeout de ejecución en segundos
 EXECUTION_TIMEOUT=5
 # URI de conexión a MongoDB
