--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "react-markdown": "^10.1.0"
