--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 # Puerto del servidor
 PORT=3001
-
+# Secret para JWT
+JWT_SECRET=your_jwt_secret_key
 # API Key de Google Gemini
 GEMINI_API_KEY=tu_api_key_aqui
 # API Key de Sanity GROQ
